public/style.css
*{
   padding: 0;
   margin: 0;
}

body{
   background-color: #060606;
   height: 100%;
   overflow-y: auto; 
   -ms-overflow-style: none;
   scrollbar-width: none;
}

html{
   height: 100%;
   overflow-y: auto; 
   -ms-overflow-style: none;
   scrollbar-width: none;
}

html::-webkit-scrollbar {
   display: none;
}


.sendMsg {
   margin-top: 1rem;
   width: 100%;
   height: 9vh;
   display: flex;
   align-items: center;
   justify-content: center;
   ;
   position: absolute;
   bottom: 0;
   background: #000000;
   
}

#message {
   flex-grow: 1;
   height: 75%;
   border-radius: 20px;
   border: none;
   padding-left: 1rem;
   font-size: 1.2rem;
   margin-left: 0;
   background-color: #282727;
   color: #fff;
   transform: scale(0.9);
}
#messages{
   padding-bottom: 60px; 
}


#sendBtn {
   height: 74%;
   width: 8%;
   min-width: 120px; 
   max-width: 110px; 
   border-radius: 20px;
   border: none;
   font-size: 1.2rem;
   background: #0ada0a;
   color: #fff;
   opacity: 0.8;
   white-space: nowrap;
   transform: scale(0.9);
}

#sendBtn:hover {
   opacity: 1;
}

.para{
   padding: 0.5rem;
   margin: 1rem;
   transform: scale(1.1);
   display: block;
   width: fit-content;
   color: #fff;
}


.incoming {
   background: #29292992;
   text-align: left;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
   border-bottom-left-radius: 15px;
}

.outgoing {
   background: #03602e;
   text-align: right;
   margin-left: auto;
   border-top-left-radius: 15px;
   border-bottom-right-radius: 15px;
   border-bottom-left-radius: 15px;
}

@media (max-width: 600px) {
   .sendMsg {
      height: 10vh;
      padding: 0.3rem;
   }

   #message {
      font-size: 0.9rem;
      padding-left: 0.8rem;
   }

   #sendBtn {
      font-size: 0.9rem;
      width: 20%;
   }

   .para {
      font-size: 0.9rem;
      max-width: 75%;
   }
}

